<resources>
    <string name="com_sina_weibo_sdk_login_with_weibo_account">用微博登录</string>
    <string name="com_sina_weibo_sdk_login">登录</string>
    <string name="com_sina_weibo_sdk_logout">注销</string>
    <string name="payeco_error_get_order_error">获取订单失败</string>
    <string name="payeco_prompt">提示</string>
    <string name="payeco_confirm">"确  认"</string>
    <string name="payeco_plugin_pay_fail">支付失败</string>
    <string name="payeco_plugin_pay_init_fail">插件初始化失败</string>
    <string name="payeco_plugin_pay_verify_fail">订单验证失败</string>
    <string name="payeco_plugin_initing">正在初始化...</string>
    <string name="payeco_networkError">没有网络连接，请检查网络设置</string>
    <string name="payeco_keyboard">"密  码  键  盘"</string>
    <string name="payeco_keyboard_tips">采用银联标准加密技术传输，保证密码输入安全</string>
    <string name="payeco_keyboard_digital">数字</string>
    <string name="payeco_keyboard_character">字母</string>
    <string name="payeco_keyboard_symbol">符号</string>
    <string name="payeco_keyboard_confirm">"确  定"</string>
    <string name="payeco_keyboard_delete">"回  退"</string>
    <string name="payeco_keyboard_edit_hint">请输入银行卡密码</string>
    <string name="payeco_keyboard_next">下一页</string>
    <string name="payeco_keyboard_pre">上一页</string>
    <string name="payeco_pay_cvn2">卡背面签名栏后三位</string>
    <string name="payeco_pay_validate">有效期:</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">映客直播</string>
    <string name="loading_text">加载中…</string>
    <string name="response_no_content_refresh">加载失败，轻触屏幕重试</string>
    <string name="response_no_content">抱歉，没有获取到相关的内容</string>
    <string name="layout_network_wifi">仅限Wi-Fi联网</string>
    <string name="tip_base_image_getting_failed">获取图片失败</string>
    <string name="account_upload_fail">上传失败</string>
    <string name="default_user_location">难道在火星?</string>
    <string name="login_take_photo">拍照</string>
    <string name="login_input_place">请输入地区名</string>
    <string name="login_choose_logintype">选择登录方式</string>
    <string name="network_no_avaliable_sixin">网络未连接，请检查网络或稍后重试</string>
    <string name="network_no_avaliable">网络未连接，请检查后重试</string>
    <string name="network_connect_server_error">网络连接失败，请稍后重试</string>
    <string name="network_no_avaliable_fresh">网络不给力，点击重试</string>
    <string name="network_server_wrong">服务器卡飞了</string>
    <string name="network_offline_tip">当前处于离线模式</string>
    <string name="network_no_avaliable_check">目前无网，请检查网络设置</string>
    <string name="network_tip_change">请切换到Net接入点或Wifi下重试</string>
    <string name="network_no_avaliable_btn">设置网络</string>
    <string name="sixin_nonfriends">还没有好友和你说话，找他们聊聊吧</string>
    <string name="sixin_nonpeople">还没有好友和你说话，找个人聊聊吧</string>
    <string name="sixin_chat">私信</string>
    <string name="sixin_follow">关注</string>
    <string name="sixin_lahei">拉黑</string>
    <string name="sixin_popout">解除拉黑</string>
    <string name="sixin_if_pushin">是否确定解除拉黑</string>
    <string name="longclick">长按可解除拉黑</string>
    <string name="global_add_friend">添加好友</string>
    <string name="global_input_keyword">请输入关键字</string>
    <string name="global_search_result">搜索结果</string>
    <string name="global_more">更多</string>
    <string name="global_loading_failure">加载失败</string>
    <string name="global_tip">提示</string>
    <string name="global_cancel">取消</string>
    <string name="use_photo">使用图片</string>
    <string name="btn_transfer">翻转</string>
    <string name="global_btn_good">好</string>
    <string name="global_me">我</string>
    <string name="global_web_pay">Web支付</string>
    <string name="global_pay_area">cn</string>
    <string name="global_pic_noexsists">图片不存在</string>
    <string name="global_save">保存</string>
    <string name="null_blacklist">空空如也</string>
    <string name="placeholder_text"> </string>
    <string name="global_img_level_regex">inke_img_level</string>
    <string name="global_db_exception">抱歉，数据库操作异常！！！</string>
    <string name="global_file_download_start">开始下载文件</string>
    <string name="global_file_download_finish">文件下载完成</string>
    <string name="global_file_download_error">文件下载出错</string>
    <string name="global_deault_duration">00:00</string>
    <string name="global_no_content">  </string>
    <string name="global_delete">删除</string>
    <string name="global_copy_to_clipboard">复制到剪贴板</string>
    <string name="global_copy_to_clipboard_success">复制成功</string>
    <string name="global_copy">复制</string>
    <string name="global_manage">管理</string>
    <string name="global_save_success">保存成功</string>
    <string name="global_next">下一步</string>
    <string name="global_gift">礼物</string>
    <string name="global_audio">语音</string>
    <string name="global_photo">照片</string>
    <string name="global_take_photo">拍摄</string>
    <string name="global_system_msg">系统消息</string>
    <string name="global_wechat_redpacket_gettip">“映客”  里微信登录领取</string>
    <string name="global_wechat_redpacket_value">微信红包%1$s元</string>
    <string name="global_wechat_redpacket_default">微信红包0元</string>
    <string name="global_audio_record_fail">SD卡访问失败，录音失败</string>
    <string name="login_login">登录</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail_empty">返回为空,登录失败</string>
    <string name="login_cancel">取消登录</string>
    <string name="login_more_fun">登录后有更多惊喜哦</string>
    <string name="login_goto_checkwx">请检查您的微信是否正确安装</string>
    <string name="login_wxauth_failure">微信请求授权失败</string>
    <string name="login_request_wx_accesstoken_failure">授权失败</string>
    <string name="login_request_wx_unionid_failure">授权失败</string>
    <string name="login_with_sina">微博登录</string>
    <string name="login_with_wechat">微信登录</string>
    <string name="login_terms_prefix">登录即代表你同意</string>
    <string name="login_terms_suffix">映客服务和隐私条款</string>
    <string name="login_operfail_retry">操作失败请稍后重试</string>
    <string name="login_choose_country_district">选择国家和地区</string>
    <string name="login_default_country">中国</string>
    <string name="login_default_alphabet">A</string>
    <string name="login_phone_name_null">请输入手机号</string>
    <string name="login_phone_name_fail">请输入格式正确的手机号码</string>
    <string name="login_phone_get_captcha_fail">获取验证码失败</string>
    <string name="login_phone_no_captcha">还未成功获取验证码</string>
    <string name="login_phone_captcha_fail">验证码有误，请检查后重新输入</string>
    <string name="login_phone_binded">该手机号已经被绑定</string>
    <string name="login_bind_success">绑定成功</string>
    <string name="login_bind_fail">绑定失败</string>
    <string name="login_withdraw_cash_fail">提现失败</string>
    <string name="login_phone_name_fail_prefix">请输入格式正确的</string>
    <string name="login_phone_name_fail_suffix">位手机号码</string>
    <string name="login_default_areacode">+86</string>
    <string name="login_input_code_tip">请先输入验证码</string>
    <string name="login_code_format_error">验证码错误，请重新确认验证短信</string>
    <string name="login_code_success_tip">运营商将会给您发送短信或者拨打电话告诉您验证码</string>
    <string name="room_live_tip_open_microphone">插上耳机直播效果更好</string>
    <string name="room_live_tip_quit">你确认结束直播吗?</string>
    <string name="room_live_tip_leave">你确认退出直播吗?</string>
    <string name="room_live_end_tip">直播已结束</string>
    <string name="room_live_status_online">直播</string>
    <string name="room_live_status_end">已结束</string>
    <string name="room_live_error_join_fail">进入直播间失败</string>
    <string name="room_live_net_2g">你的网络不佳，建议你使用3G/4G/WIFI网络</string>
    <string name="room_system_msg">直播消息</string>
    <string name="room_live_loading">载入ing</string>
    <string name="room_live_badnet">网太挫，恢复ing</string>
    <string name="room_live_neterror">网络连接中断，请检查网络</string>
    <string name="room_live_forbidchat">您暂时不能发言</string>
    <string name="room_live_pausechat">为了保证流畅，暂时不能发言哦</string>
    <string name="room_live_chattoofast">发言不要太频繁哦</string>
    <string name="room_live_forbidlike">为了保证流畅，暂时关闭点赞功能</string>
    <string name="room_live_forbidgift">为了保证流畅，暂时不能送礼哦</string>
    <string name="room_live_sendgifttoofast">送礼不要太频繁哦</string>
    <string name="room_live_dropgifteffect">为了保证流畅，礼物效果暂时关闭哦</string>
    <string name="room_live_giftneedlevel">等级高于xx级才能送礼哦</string>
    <string name="room_roomuser_forbidchat">禁言</string>
    <string name="room_roomuser_setmanage">设为管理</string>
    <string name="room_be_sendmanager">您已经被设置为管理员</string>
    <string name="room_be_cancelmanager">您被取消管理员资格</string>
    <string name="room_roomuser_setmanage_success">设置为管理成功</string>
    <string name="room_roomuser_setmanage_out">管理员超出限制</string>
    <string name="room_roomuser_cancalmanage">取消管理</string>
    <string name="room_roomuser_delmanage">删除管理</string>
    <string name="room_roomuser_bemanager">您已被设置成为管理员</string>
    <string name="room_roomuser_unmanager">您已被取消管理员资格</string>
    <string name="room_roomuser_delmanage_success">删除管理员成功</string>
    <string name="room_roomuser_managelist">管理员列表</string>
    <string name="room_roomuser_manager">管理员</string>
    <string name="room_roomuser_manage">管理</string>
    <string name="room_longclick_delete">长按可删除管理员</string>
    <string name="room_roomuser_forbidchat_success">禁言成功</string>
    <string name="room_roomuser_report">举报</string>
    <string name="room_secret_tip">选择你要通知的人，只有他们会收到你的直播消息，你的直播不会被别人看到</string>
    <string name="room_create_low_system">您的手机系统版本过低，暂不支持直播</string>
    <string name="room_create_2g">暂不支持在2G网络下直播，请链接WIFI或切换至3G以上的网络</string>
    <string name="room_create_nonet_reconnect_fail">网络连接中断,请退出重试</string>
    <string name="room_send_gift">我送了%1$s个%2$s</string>
    <string name="room_send_gift_creator">我给你送了%1$s个%2$s,你获得%3$s映票</string>
    <string name="room_gift_experience">+%1$s经验值</string>
    <string name="room_gift_continue_send_default">"连发
10S"</string>
    <string name="room_gift_continue_send">"连发
%1$dS"</string>
    <string name="room_gift_experience_default">+0经验值</string>
    <string name="confirm">确定</string>
    <string name="userhome_searchfriend_hint">请输入好友昵称/ID</string>
    <string name="userhome_search">搜索</string>
    <string name="userhome_complete">完成</string>
    <string name="userhome_photoalbum">相册</string>
    <string name="userhome_choose_from_photoalbum">从相册选择</string>
    <string name="userhome_nickname_tip">昵称</string>
    <string name="charge_balance">账户余额:</string>
    <string name="charge_exchange">兑换</string>
    <string name="charge_points_default">0积分</string>
    <string name="charge_value_default">0</string>
    <string name="charge_ingkee_point">映票</string>
    <string name="charge_withdraw_all">可提现金额（元）</string>
    <string name="charge_withdraw_today">今日可提现金额（元）</string>
    <string name="charge_withdraw_cash">提现</string>
    <string name="charge_common_problems">常见问题</string>
    <string name="charge_desc_default">赠送0钻石</string>
    <string name="charge_withdraw_cash_complete">完成</string>
    <string name="charge_withdraw_cash_success_tip1">提现申请已经提交，请去微信查看</string>
    <string name="charge_withdraw_cash_to_account">提现至微信账号:</string>
    <string name="charge_withdraw_success_tip">预计24小时内到账</string>
    <string name="charge_withdraw_cash_money">￥%1$s</string>
    <string name="charge_choose_paymethod">请选择支付方式</string>
    <string name="charge_choose_numof_charge_default">支付方式:微信支付</string>
    <string name="charge_free">免费</string>
    <string name="charge_meepay_customservice">充值遇到问题请关注官方微信meepay进行沟通</string>
    <string name="hall_no_live_tip">"你的好友静静悄悄
此时还没有直播"</string>
    <string name="hall_goto_hot">去看看最新精彩直播</string>
    <string name="hall_live_recent">最新</string>
    <string name="hall_live_hottest">最热</string>
    <string name="hall_live_records_num_default">0个精彩回放</string>
    <string name="hall_choice_sex">性别</string>
    <string name="phone_login_setting_head">设置头像</string>
    <string name="phone_login_setting_nick_hint">请输入昵称</string>
    <string name="phone_login_setting_male">男</string>
    <string name="phone_login_setting_female">女</string>
</resources>