<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/charge_event_container"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/charge_value" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/img_balance_icon" android:contentDescription="@string/app_name" style="@style/charinfor_balance_img" />
            <TextView android:id="@id/txt_charge_value" android:paddingLeft="0.0dip" android:layout_marginLeft="5.0dip" android:text="@string/charge_value_default" style="@style/setting_item_lefttext" />
        </LinearLayout>
        <TextView android:id="@id/txt_charge_desc" android:text="@string/charge_desc_default" android:layout_below="@id/charge_value" style="@style/charge_event_desc" />
    </RelativeLayout>
    <TextView android:id="@id/bt_pay" android:text="@string/charge_points_default" style="@style/charge_event_btn" />
</RelativeLayout>