<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" style="@style/titlebar_container"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton android:id="@id/back" android:contentDescription="@string/app_name" style="@style/search_titlebar_back" />
    <RelativeLayout style="@style/head_search_editcontainer">
        <ImageButton android:id="@id/btn_searchicon" android:contentDescription="@string/app_name" style="@style/cell_search_searchicon" />
        <EditText android:id="@id/edit" android:hint="@string/userhome_searchfriend_hint" android:layout_toLeftOf="@id/btn_del" android:layout_toRightOf="@id/btn_searchicon" style="@style/cell_search_edittext" />
        <ImageButton android:id="@id/btn_del" android:contentDescription="@string/app_name" style="@style/cell_search_btn_del" />
    </RelativeLayout>
    <Button android:id="@id/btn_search" android:text="@string/userhome_search" style="@style/head_search_btn_search" />
</LinearLayout>