<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/global_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:fresco="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/global_cell_padding" android:layout_marginBottom="@dimen/global_cell_padding">
        <com.facebook.drawee.view.SimpleDraweeView android:id="@id/phone_edit_photo" android:layout_width="90.0dip" android:layout_height="90.0dip" fresco:fadeDuration="0" fresco:placeholderImage="@drawable/default_head" fresco:placeholderImageScaleType="fitCenter" fresco:roundAsCircle="true" fresco:roundingBorderWidth="1.0dip" fresco:roundingBorderColor="@color/head_stroke_bg" />
        <TextView android:textSize="@dimen/chat_item_textsize" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/room_user_padding" android:text="@string/phone_login_setting_head" />
    </LinearLayout>
    <RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/global_header_height">
        <TextView android:textSize="@dimen/userhome_head_verified_icon_height" android:textColor="@color/cell_public_chat_shader" android:id="@id/phone_info_nick_tv" android:layout_marginLeft="@dimen/global_left_padding" android:text="@string/userhome_nickname_tip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/wrap_wrap" />
        <EditText android:textColor="@color/hall_live_item_nopic_username" android:gravity="right" android:id="@id/phone_login_edit_nick" android:background="@null" android:layout_marginLeft="10.0dip" android:layout_marginRight="@dimen/global_left_padding" android:hint="@string/phone_login_setting_nick_hint" android:maxLength="16" android:layout_toRightOf="@id/phone_info_nick_tv" style="@style/userinfo_nickname_righttext" />
    </RelativeLayout>
    <View style="@style/line_black_setting_full" />
    <RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/global_header_height">
        <TextView android:textSize="@dimen/userhome_head_verified_icon_height" android:textColor="@color/cell_public_chat_shader" android:layout_marginLeft="@dimen/global_left_padding" android:text="@string/hall_choice_sex" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/wrap_wrap" />
        <RadioGroup android:orientation="horizontal" android:id="@id/phone_login_sex" android:layout_marginRight="@dimen/global_left_padding" android:layout_alignParentRight="true" android:layout_centerInParent="true" style="@style/wrap_wrap">
            <RadioButton android:textColor="@drawable/phone_info_choice_sex" android:id="@id/phone_login_sex_male" android:button="@null" android:text="@string/phone_login_setting_male" android:drawableLeft="@drawable/phone_login_edit_sex_selector" style="@style/wrap_wrap" />
            <RadioButton android:textColor="@drawable/phone_info_choice_sex" android:id="@id/phone_login_sex_female" android:layout_marginLeft="@dimen/global_cell_padding" android:button="@null" android:text="@string/phone_login_setting_female" android:drawableLeft="@drawable/phone_login_edit_sex_selector" style="@style/wrap_wrap" />
        </RadioGroup>
    </RelativeLayout>
    <LinearLayout android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/phone_login_edit_confirm" android:layout_height="@dimen/bind_phonenum_edittext_height" android:layout_marginTop="30.0dip" android:text="@string/userhome_complete" style="@style/btn_bind_phonenum_next" />
    </LinearLayout>
</LinearLayout>