<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/hall_live_no_live_container"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/img_cover" android:focusable="false" android:layout_width="fill_parent" android:layout_height="@dimen/cell_hall_no_live_height" android:src="@drawable/hall_no_live_bg" android:scaleType="centerCrop" android:contentDescription="@string/app_name" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="13.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hall_no_live_tip" />
        <Button android:textSize="14.0sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/btn_goto_hot" android:background="@drawable/bg_btn_goto_hot" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/goto_hot_height" android:layout_marginTop="10.0dip" android:text="@string/hall_goto_hot" />
    </LinearLayout>
</RelativeLayout>